tests/sources/invalid/operators/operator_errors.fire
// Operator error tests - comprehensive

// Type mismatches in arithmetic
fn arithmetic_mismatches() -> void {
    a: int32 = 5;
    b: string = "hello";
    result: int32 = a + b;  // Can't add int and string  //~ ERROR FS-SEM-0010 @23
    
    s1: string = "hello";
    s2: string = "world";
    s3: string = s1 - s2;  // Can't subtract strings  //~ ERROR FS-SEM-0010 @21
    
    x: int32 = 10;
    y: string = x * "repeat";  // Can't multiply int and string  //~ ERROR FS-SEM-0010 @19
}

// Division by zero (if statically checked)
fn division_by_zero() -> void {
    x: int32 = 10 / 0;  // Division by zero
    y: int32 = 15 % 0;  // Modulo by zero
}

// Comparison type mismatches
fn comparison_mismatches() -> void {
    a: int32 = 5;
    b: string = "5";
    result: bool = a < b;  // Can't compare int and string  //~ ERROR FS-SEM-0010 @22
    
    c: bool = "hello" > "world";  // May not support string comparison  //~ ERROR FS-SEM-0010 @23
}

// Logical operators on non-booleans
fn logical_on_non_bool() -> void {
    a: int32 = 5;
    b: int32 = 10;
    result: bool = a and b;  // 'and' requires boolean operands  //~ ERROR FS-PARSE-0010 @22
//~^ ERROR FS-PARSE-0010 @26
//~^^ ERROR FS-SEM-0002 @5
}

// Unary operator type mismatches
fn unary_mismatches() -> void {
    s: string = "hello";
    negated: string = -s;  // Can't negate a string  //~ ERROR FS-SEM-0010 @23
    
    x: int32 = 5;
    b: bool = not x;  // 'not' requires boolean  //~ ERROR FS-PARSE-0010 @19
//~^ ERROR FS-PARSE-0003 @15
}

// Assignment to non-lvalue
fn assign_to_non_lvalue() -> void {
    5 = 10;  // Can't assign to literal
    (5 + 3) = 10;  // Can't assign to expression
}

// Compound assignment type mismatch
fn compound_assign_mismatch() -> void {
    x: int32 = 5;
    x += "hello";  // Type mismatch
}

// Increment/decrement on non-numeric
fn inc_dec_non_numeric() -> void {
    s: string = "hello";
    s++;  // Can't increment string  //~ ERROR FS-SEM-0002 @5
}
